--- a/Concurrence/TODO
+++ b/Concurrence/TODO
@@ -1,1 +1,30 @@
-fonctions de SharedVariables
+SantaVar : variable partagée entre santa/rennes/elfes, ne sert qu'a reveiller Santa.
+
+ElvesVar : variable partagée entre santa et les elfes uniquement.
+
+ReindeerVar : variable partagée entre santa et les rennes. 
+_ reindeerIn(int) : renne revient de vacances, il inscrit son id dans le tableau
+des rennes en attente puis : s'il y a deja 8 rennes et il reveille Santa
+et les rennes en attente sinon il attend que le 9e renne le reveille.
+_ prepareForChristmas(int) : une fois que tous les rennes sont prets, ils attendent le signal
+de depart de noel (que Santa enverra).
+_ reindeerOut(int) : noel est terminé, le renne repart en vacances et enleve son id du
+tableau des rennes en attente.
+
+
+Reindeer : 
+
+Boucle sur reindeerIn() -> prepareForChristmas -> reindeerOut()
+
+Elf : 
+
+Bouvle sur ElfIn() -> ElfOut()
+
+Santa : 
+
+Boucle sur dormir() -> reindeervar.noel_start() ou AIDER ELFES
+
+Main : 
+
+Initialise les variables et lance les threads.
+
